[gd_scene load_steps=48 format=2]

[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/badniks-scripts/turtle-fan-sprite.gd" type="Script" id=1]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/badniks-scripts/turtle-fan/turtle-fan-fsm.gd" type="Script" id=2]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/badniks-sprites/turtle-fan/turtle-fan-sheet.png" type="Texture" id=3]
[ext_resource path="res://game-assets/game-scripts/player-scripts/character-animator.gd" type="Script" id=4]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/badniks-scripts/turtle-fan/blowing.gd" type="Script" id=5]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/badniks-scripts/turtle-fan/move.gd" type="Script" id=6]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/badniks-scripts/turtle-fan/wait.gd" type="Script" id=7]
[ext_resource path="res://game-assets/audio/sfx/turtle-walk.wav" type="AudioStream" id=8]
[ext_resource path="res://game-assets/audio/sfx/turtle-walk2.wav" type="AudioStream" id=9]
[ext_resource path="res://game-assets/audio/sfx/landing.wav" type="AudioStream" id=10]
[ext_resource path="res://game-assets/audio/sfx/fan-start.ogg" type="AudioStream" id=11]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/badniks-sprites/turtle-fan/dirt-sheet.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 211, 95 )

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 14, 18.5 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 13.5, 14 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 17, 150 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 150, 17 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 42, 58 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 42, 0, 42, 58 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 84, 0, 42, 58 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 126, 0, 42, 58 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 168, 0, 42, 58 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 58, 42, 58 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 42, 58, 42, 58 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 84, 58, 42, 58 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 168, 116, 42, 58 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 174, 42, 58 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 126, 58, 42, 58 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 168, 58, 42, 58 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 116, 42, 58 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 42, 116, 42, 58 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 84, 116, 42, 58 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 126, 116, 42, 58 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 168, 116, 42, 58 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 126, 174, 42, 58 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 168, 174, 42, 58 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 42, 174, 42, 58 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 84, 174, 42, 58 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 12.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Walking",
"speed": 12.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "RotateToV",
"speed": 12.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "RotateToH",
"speed": 12.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "FanV",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "FanH",
"speed": 5.0
} ]

[sub_resource type="Animation" id=25]
resource_name = "FanH"
length = 0.166667
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "FanH" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0833333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=28]
resource_name = "FanV"
length = 0.166667
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "FanV" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0833333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=26]
resource_name = "RotateToH"
length = 0.5
step = 0.0625
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4375 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "RotateToH", "FanH" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 6 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../../Rotate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=27]
resource_name = "RotateToV"
length = 0.75
step = 0.0625
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0625, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "RotateToV", "RotateToH", "FanV" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 0, 0 ]
}

[sub_resource type="Animation" id=24]
resource_name = "Walking"
length = 0.5625
loop = true
step = 0.0625
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walking" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.125, 0.1875, 0.25, 0.375, 0.4375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_step"
}, {
"args": [  ],
"method": "play_step"
} ]
}

[sub_resource type="CanvasItemMaterial" id=33]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id=34]
offsets = PoolRealArray( 0.6, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="TurtleFan" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 1 )
eye_position = Vector2( 0, 0 )

[node name="FSM" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = "Wait"

[node name="Wait" type="Node" parent="FSM"]
script = ExtResource( 7 )

[node name="Move" type="Node" parent="FSM"]
script = ExtResource( 6 )

[node name="Blowing" type="Node" parent="FSM"]
script = ExtResource( 5 )

[node name="Eye" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512
monitorable = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Eye"]
modulate = Color( 0.313726, 1, 0, 1 )
position = Vector2( 0, -77 )
shape = SubResource( 37 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512
monitorable = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -0.5 )
shape = SubResource( 36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 29 )

[node name="Character" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="FanSensor" type="Area2D" parent="Character"]
monitorable = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="V" type="CollisionShape2D" parent="Character/FanSensor"]
position = Vector2( 0, -168 )
shape = SubResource( 30 )

[node name="H" type="CollisionShape2D" parent="Character/FanSensor"]
position = Vector2( 169, 0 )
shape = SubResource( 31 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Character"]
position = Vector2( -14.5, -40 )
frames = SubResource( 18 )
animation = "Idle"
centered = false

[node name="CharacterAnimator" type="AnimationPlayer" parent="Character/AnimatedSprite"]
anims/FanH = SubResource( 25 )
anims/FanV = SubResource( 28 )
anims/RESET = SubResource( 23 )
anims/RotateToH = SubResource( 26 )
anims/RotateToV = SubResource( 27 )
anims/Walking = SubResource( 24 )
script = ExtResource( 4 )

[node name="UpBlow" type="CPUParticles2D" parent="Character"]
material = SubResource( 33 )
position = Vector2( 0, -18 )
emitting = false
amount = 16
local_coords = false
texture = ExtResource( 12 )
emission_shape = 2
emission_rect_extents = Vector2( 15, 0 )
direction = Vector2( 0, -1 )
spread = 1.0
initial_velocity = 500.0
linear_accel = -1.0
damping = 25.0
color_ramp = SubResource( 34 )
anim_speed = 2.0
anim_speed_random = 1.0

[node name="SideBlow" type="CPUParticles2D" parent="Character"]
material = SubResource( 33 )
position = Vector2( 21, 1 )
emitting = false
amount = 16
local_coords = false
texture = ExtResource( 12 )
emission_shape = 2
emission_rect_extents = Vector2( 0, 15 )
spread = 2.0
gravity = Vector2( 0, 20 )
initial_velocity = 500.0
damping = 25.0
color_ramp = SubResource( 34 )
anim_speed = 2.0
anim_speed_random = 1.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 0.2, 0.8 )

[node name="PositionToPush" type="Position2D" parent="."]
position = Vector2( 0, -50 )
__meta__ = {
"_gizmo_extents_": 194.9
}

[node name="TurtleWalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "SFX"
__meta__ = {
"_edit_lock_": true
}

[node name="TurtleWalk2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
bus = "SFX"
__meta__ = {
"_edit_lock_": true
}

[node name="Rotate" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
bus = "SFX"
__meta__ = {
"_edit_lock_": true
}

[node name="Fan" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
bus = "SFX"
__meta__ = {
"_edit_lock_": true
}

[connection signal="target_sighted" from="." to="FSM" method="_on_TurtleFan_target_sighted"]
[connection signal="body_entered" from="Eye" to="." method="_on_Eye_body_entered"]
[connection signal="body_exited" from="Eye" to="." method="_on_Eye_body_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_when_overlap_player"]
[connection signal="body_entered" from="Character/FanSensor" to="." method="_on_FanSensor_body_entered"]
[connection signal="body_exited" from="Character/FanSensor" to="." method="_on_FanSensor_body_exited"]
[connection signal="animation_finished" from="Character/AnimatedSprite/CharacterAnimator" to="FSM" method="_on_CharacterAnimator_animation_finished"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
